# stackone-defender

./: .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/stackone_defender/: __init__.py  config.py  types.py
src/stackone_defender/classifiers/: __init__.py  onnx_classifier.py  pattern_detector.py  patterns.py  tier2_classifier.py
src/stackone_defender/core/: __init__.py  prompt_defense.py  tool_result_sanitizer.py
src/stackone_defender/models/minilm-full-aug/: tokenizer_config.json
src/stackone_defender/sanitizers/: __init__.py  encoding_detector.py  normalizer.py  pattern_remover.py  role_stripper.py  sanitizer.py
src/stackone_defender/sfe/: __init__.py  preprocess.py
src/stackone_defender/utils/: __init__.py  boundary.py  field_detection.py  structure.py
tests/: test_integration.py  test_onnx_classifier.py  test_pattern_detector.py  test_sanitizers.py  test_sfe.py  test_tier2_classifier.py  test_utils.py
