[project]
name = "stackone-defender"
version = "0.1.0"
description = "Prompt injection defense for AI tool-calling"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16.0", "tokenizers>=0.15.0", "numpy>=1.24.0"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackone_defender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
