[project]
name = "stackone-defender"
version = "0.6.2"
description = "Indirect prompt injection defense for AI agents using tool calls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "StackOne", email = "support@stackone.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/StackOneHQ/stackone-defender"
Repository = "https://github.com/StackOneHQ/stackone-defender"

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16.0", "tokenizers>=0.15.0", "numpy>=1.24.0"]
# fasttext-ng provides the `fasttext` module (maintained bindings; supports 3.13).
# Pulls numpy>=2.3; SFE still fail-opens when import/load fails.
sfe = ["fasttext-ng>=0.9.3"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "onnxruntime>=1.16.0",
  "tokenizers>=0.15.0",
  "numpy>=1.24.0",
  "fasttext-ng>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackone_defender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
